# dbt-mcp-http

./: .changie.yaml  .env.example  .gitignore  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  Taskfile.yml  deploy.sh  example.env  install.sh  launch_mcp.sh  minimal_server.py  pyproject.toml  requirements.txt  swagger-api-definition.json
.changes/: v0.1.3.md  v0.2.0.md  v0.2.1.md  v0.2.10.md  v0.2.11.md  v0.2.12.md  v0.2.13.md  v0.2.14.md  v0.2.15.md  v0.2.16.md  v0.2.17.md  v0.2.18.md  v0.2.19.md  v0.2.2.md  v0.2.3.md  v0.2.4.md  v0.2.5.md  v0.2.6.md  v0.2.7.md  v0.2.8.md  v0.2.9.md
.changes/unreleased/: Bug Fix-20250525-211349.yaml  Bug Fix-20250529-123336.yaml  Bug Fix-20250603-170327.yaml  Bug Fix-20250606-123923.yaml  Bug Fix-20250624-140038.yaml  Bug Fix-20250701-111233.yaml  Bug Fix-20250701-111929.yaml  Bug Fix-20250703-164334.yaml  Bug Fix-20250709-132829.yaml  Bug Fix-20250714-132325.yaml  Bug Fix-20250718-182726.yaml  Enhancement or New Feature-20250506-150240.yaml  Enhancement or New Feature-20250506-212522.yaml  Enhancement or New Feature-20250508-001258.yaml  Enhancement or New Feature-20250520-130237.yaml  Enhancement or New Feature-20250527-173014.yaml  Enhancement or New Feature-20250528-084448.yaml  Enhancement or New Feature-20250701-120605.yaml  Enhancement or New Feature-20250701-140430.yaml  Enhancement or New Feature-20250703-082054.yaml  Enhancement or New Feature-20250711-160718.yaml  Enhancement or New Feature-20250721-104053.yaml  Under the Hood-20250423-134646.yaml  Under the Hood-20250428-132222.yaml  Under the Hood-20250428-133818.yaml  Under the Hood-20250502-150725.yaml  Under the Hood-20250519-133110.yaml  Under the Hood-20250519-142811.yaml  Under the Hood-20250521-110553.yaml  Under the Hood-20250521-150418.yaml  Under the Hood-20250522-161146.yaml  Under the Hood-20250522-161251.yaml  Under the Hood-20250523-175502.yaml  Under the Hood-20250528-080437.yaml  Under the Hood-20250528-083544.yaml  Under the Hood-20250528-084330.yaml  Under the Hood-20250528-084611.yaml  Under the Hood-20250528-085405.yaml  Under the Hood-20250528-134823.yaml  Under the Hood-20250528-164155.yaml  (+30 more)
.github/: CODEOWNERS
.github/actions/setup-python/: action.yml
.github/workflows/: changelog-check.yml  codeowners-check.yml  create-release-pr.yml  create-release-tag.yml  pr.yaml  release.yml  run-checks-pr.yaml
.task/checksum/: d2
client/: main.py  tools.py
dbt_mcp/: main.py
dbt_mcp/config/: config.py
dbt_mcp/dbt_cli/: tools.py
dbt_mcp/dbt_core/: tools.py
dbt_mcp/discovery/: client.py  tools.py
dbt_mcp/mcp/: server.py
dbt_mcp/prompts/: prompts.py
dbt_mcp/prompts/dbt_cli/: build.md  compile.md  docs.md  list.md  parse.md  run.md  test.md
dbt_mcp/prompts/discovery/: get_model_details.md
dbt_mcp/prompts/semantic_layer/: get_entities.md  query_metrics.md
dbt_mcp/remote/: tools.py
dbt_mcp/semantic_layer/: client.py  levenshtein.py  tools.py  types.py
dbt_mcp/semantic_layer/sdk/: base_adbc_client.py  sync_adbc_client.py  sync_sl_client.py
docs/: diagram.d2
evals/semantic_layer/: test_eval_semantic_layer.py
examples/openai_agent/: README.md  main.py  pyproject.toml
examples/openai_responses/: README.md  main.py  pyproject.toml
examples/remote_mcp/: main.py  pyproject.toml
src/client/: main.py  tools.py
src/dbt_mcp/: http_server.py  main.py
src/dbt_mcp/config/: config.py
src/dbt_mcp/dbt_cli/: tools.py
src/dbt_mcp/discovery/: client.py  tools.py
src/dbt_mcp/gql/: errors.py
src/dbt_mcp/mcp/: server.py
src/dbt_mcp/prompts/: __init__.py
src/dbt_mcp/remote/: tools.py
src/dbt_mcp/semantic_layer/: client.py  tools.py  types.py
src/dbt_mcp/tools/: definitions.py  register.py  tool_names.py
src/dbt_mcp/tracking/: tracking.py
tests/: env_vars.py
tests/integration/discovery/: test_discovery.py
tests/integration/initialization/: test_initialization.py
tests/integration/remote/: test_remote.py
tests/integration/semantic_layer/: test_semantic_layer.py
tests/integration/tracking/: test_tracking.py
tests/mocks/: config.py
tests/unit/: mocks.py  test_semantic_layer.py
tests/unit/config/: test_config.py
(+25 files in other folders)
