[project]
name = "dbt-mcp"
description = "A MCP (Model Context Protocol) server for interacting with dbt resources."
authors = [{ name = "dbt Labs" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dynamic = ["version"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
]
dependencies = [
  # Pinning all dependencies because this app is installed with pip
  # and we want to have a consistent install as much as possible.
  "dbt-protos==1.0.317",
  "dbt-sl-sdk[sync]==0.11.0",
  "dbtlabs-vortex==0.2.0",
  "mcp[cli]==1.6.0",
  "pandas==2.2.3",
  "python-dotenv==1.0.1",
  "pyyaml==6.0.2",
  "requests==2.32.3",
]
[dependency-groups]
dev = [
  "ruff>=0.11.2",
  "types-requests>=2.32.0.20250328",
  "mypy>=1.12.1",
  "pre-commit>=4.2.0",
  "pytest-asyncio>=0.26.0",
  "pytest>=8.3.5",
  "openai>=1.71.0",
  "pyarrow-stubs>=19.1",
  "types-pyyaml>=6.0.12.20250516",
]

[project.urls]
Documentation = "https://github.com/dbt-labs/dbt-mcp#readme"
Issues = "https://github.com/dbt-labs/dbt-mcp/issues"
Source = "https://github.com/dbt-labs/dbt-mcp"
Changelog = "https://github.com/dbt-labs/dbt-mcp/blob/main/CHANGELOG.md"

[project.scripts]
dbt-mcp = "dbt_mcp.main:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/dbt_mcp/**/*", "README.md", "LICENSE"]

[tool.hatch.version]
source = "vcs"
